<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_background">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:visibility="gone" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/semi_transparent">
                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    app:materialIcon="email"
                    app:materialIconColor="#fff"
                    app:materialIconSize="24dp"
                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/edit_text_hint"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/semi_transparent"
                android:layout_marginTop="10dp">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    app:materialIcon="account"
                    app:materialIconColor="#fff"
                    app:materialIconSize="24dp"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_username"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/edit_text_hint"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/semi_transparent"
                android:layout_marginTop="10dp">
                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    app:materialIcon="lock"
                    app:materialIconColor="#fff"
                    app:materialIconSize="24dp"

                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/edit_text_hint"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/semi_transparent"
                android:layout_marginTop="10dp">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    app:materialIcon="lock"
                    app:materialIconColor="#fff"
                    app:materialIconSize="24dp"

                    android:layout_gravity="center_vertical" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password_confirm"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/edit_text_hint"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <!-- Link to Login Screen -->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>