<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_upload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:inputType="textNoSuggestions|textLongMessage"
            android:singleLine="false"
            android:id="@+id/et_title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:inputType="textNoSuggestions|textLongMessage"
            android:singleLine="false"
            android:id="@+id/et_description" />
    </android.support.design.widget.TextInputLayout>
    <Spinner
        android:id="@+id/event_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/event_choices"
        android:prompt="@string/choices_prompt"
        android:spinnerMode="dialog"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_time_ll">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_start_time"
                android:layout_weight="0.7"
                android:gravity="center_vertical|center"
                android:layout_gravity="center_vertical"
                android:textSize="18sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_focusColor="#9bd823"
                fancy:fb_fontIconResource="&#xf271;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="0dp"
                fancy:fb_textColor="#FFFFFF"
                android:layout_marginBottom="10dp"
                fancy:fb_defaultColor="#42a5f5"
                android:layout_weight="0.3"
                android:layout_gravity="bottom" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_end_time"
                android:layout_weight="0.7"
                android:gravity="center_vertical|center"
                android:layout_gravity="center_vertical"
                android:textSize="18sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_focusColor="#9bd823"
                fancy:fb_fontIconResource="&#xf271;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="0dp"
                fancy:fb_textColor="#FFFFFF"
                android:layout_marginBottom="10dp"
                fancy:fb_defaultColor="#42a5f5"
                android:layout_weight="0.3"
                android:layout_gravity="bottom" />

        </LinearLayout>

    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorAccent"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_fontIconResource="&#xf093;"
        fancy:fb_iconPosition="left"
        fancy:fb_text="Upload"
        fancy:fb_radius="0dp"
        fancy:fb_textColor="#FFFFFF" />
</LinearLayout>
